format and rewrite tests using AssertJ